--- a/index.html
+++ b/index.html
@@ -29,6 +29,39 @@
                 <div class="image">this is a placeholder for an image</div>
             </main>
         </hero>
+            <div class="information">
+                <div class="random-info">
+                    <div class="info-head">Some random information.</div>
+                    <div class="the-box">
+                        <div class="one">
+                            <div class="box-one"></div>
+                            This is some subtext under an illustration or image
+                        </div>
+                        <div class="two">
+                            <div class="box-two"></div>
+                            This is some subtext under an illustration or image
+                        </div>
+                        <div class="three">
+                            <div class="box-three"></div>
+                            This is some subtext under an illustration or image
+                        </div>
+                        <div class="four">
+                            <div class="box-four"></div>
+                            This is some subtext under an illustration or image
+                        </div>
+                    </div>
+                </div>
+
+                <div class="quote">
+                    <div class="quote-body">
+                        <div class="quote-text">
+                            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+                        </div>
+                                                            <div class="quote-owner">-Thor, God of Thunder</div>
+                                        </div>
+                    </div>
+
+            </div>
         <footer>
         </footer>
         
