--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
                                                             <div class="quote-owner">-Thor, God of Thunder</div>
                                         </div>
                     </div>
-
+            </div>
+            <div class="call-action">
+                <div class="call-body">
+                    <div class="call-words">
+                        <div class="call-head">Call to action it's time!</div>
+                        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <div class="call-button"><button>Sign up</button></div>
+                </div>
             </div>
         <footer>
+            <div class="footer-body">Copyright © the Odin Project 2022</div>
         </footer>
         
     </div>
